--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
   "homepage": "https://demos.creative-tim.com/now-ui-dashboard-react/#/",
   "dependencies": {
     "bootstrap": "4.5.0",
-    "chart.js": "2.9.3",
     "gulp": "4.0.2",
     "gulp-append-prepend": "1.0.8",
     "history": "4.10.1",
@@ -14,13 +13,16 @@
     "perfect-scrollbar": "1.5.0",
     "react": "16.13.1",
     "react-chartjs-2": "2.9.0",
+    "react-charts": "^2.0.0-beta.7",
     "react-dom": "16.13.1",
     "react-google-maps": "9.4.5",
+    "react-minimal-pie-chart": "^8.2.0",
     "react-notification-alert": "0.0.12",
     "react-router": "5.2.0",
     "react-router-dom": "5.2.0",
     "react-scripts": "3.4.1",
-    "reactstrap": "8.4.1"
+    "reactstrap": "8.4.1",
+    "recharts": "^2.0.9"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -50,5 +52,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "chart.js": "^2.9.4"
   }
 }
