--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "16.13.1",
     "react-chartjs-2": "2.9.0",
     "react-charts": "^2.0.0-beta.7",
+    "react-compound-timer": "^1.2.0",
     "react-dom": "16.13.1",
     "react-google-maps": "9.4.5",
     "react-minimal-pie-chart": "^8.2.0",
